Added Card Tags, changed Dodge to Armor.

--- a/card-model.html
+++ b/card-model.html
@@ -16,9 +16,7 @@
                     <div id="card-rightwing-top">
 
                     </div>
-                    <div id="card-rightwing-bot">
-
-                    </div>
+                    <div id="card-rightwing-bot"></div>
                 </div>
                 <div id="card-leftwing">
                     <div id="card-leftwing-top">
@@ -29,15 +27,13 @@
                             Points
                         </div>
                         <div id="card-dodge">
-                            <span id="card-dodge-val">6</span>+
+                            <span id="card-armor-val">6</span>+
                         </div>
                         <div id="card-dodge-lbl">
-                            Dodge
+                            Armor
                         </div>
                     </div>
-                    <div id="card-leftwing-bot">
-
-                    </div>
+                    <div id="card-leftwing-bot"></div>
                 </div>
             </div>
             <div id="card-name">
@@ -45,12 +41,29 @@
                     IC#<span id="card-model-icn-val">2010891</span>
                 </div>
                 <div id="card-model-name">
-                    GN-001 Gundam Exia (HG)                    
+                    GN-001 Gundam Exia (HG)
+                </div>
+            </div>
+            <div id="card-text">
+
+            </div>
+            <div id="card-tags">
+                <span id="card-tags-line1">Anno Domini &#8226; Mobile Suit</span>
+                <br/>
+                <span id="card-tags-line1">Gundam &#8226; GN Drive &#8226; Veda</span>
+            </div>
+            <div id="card-footer">
+                <div id="card-footer-serial">
+                    AD1:1/50
+                </div>
+                <div id="card-footer-website">
+                    <a href="http://gaiussensei.github.io/Project-Plavsky-Particle">http://gaiussensei.github.io/Project-Plavsky-Particle</a>
                 </div>
             </div>
         </div>
-
+        <!-- Well -->
     </div>
+    <!-- Card -->
     <!-- Load Scripts -->
     <script src="Scripts/card-model.js"></script>
 </body>
